--- a/test-output/old/API Test Suite/classes.html
+++ b/test-output/old/API Test Suite/classes.html
@@ -231,7 +231,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>disabledih</td>
+<td>disabledish</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
