--- a/test-output/old/API Test Suite/methods.html
+++ b/test-output/old/API Test Suite/methods.html
@@ -1,36 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>API Test Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="70a591">  <td>23/10/10 12:09:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddRestaurant.Addresto()[pri:0, instance:Automation.AddRestaurant@4ebff610]">Addresto</td> 
+<tr bgcolor="70a591">  <td>23/10/11 22:01:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddRestaurant.Addresto()[pri:0, instance:Automation.AddRestaurant@4ebff610]">Addresto</td> 
   <td>main@768415370</td>   <td></td> </tr>
-<tr bgcolor="b4bbb7">  <td>23/10/10 12:09:45</td>   <td>3121</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAllRestaurant.GetAll()[pri:0, instance:Automation.GetAllRestaurant@5f354bcf]">GetAll</td> 
+<tr bgcolor="b4bbb7">  <td>23/10/11 22:01:25</td>   <td>2456</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAllRestaurant.GetAll()[pri:0, instance:Automation.GetAllRestaurant@5f354bcf]">GetAll</td> 
   <td>main@768415370</td>   <td></td> </tr>
-<tr bgcolor="76be8b">  <td>23/10/10 12:09:45</td>   <td>3401</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ApproveRestaurant.approveresto()[pri:0, instance:Automation.Admin.ApproveRestaurant@2f67b837]">approveresto</td> 
+<tr bgcolor="76be8b">  <td>23/10/11 22:01:25</td>   <td>2568</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ApproveRestaurant.approveresto()[pri:0, instance:Automation.Admin.ApproveRestaurant@2f67b837]">approveresto</td> 
   <td>main@768415370</td>   <td></td> </tr>
-<tr bgcolor="7a7e9c">  <td>23/10/10 12:09:45</td>   <td>3550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAllOrders.getallorder()[pri:0, instance:Automation.Admin.GetAllOrders@1046d517]">getallorder</td> 
+<tr bgcolor="7a7e9c">  <td>23/10/11 22:01:25</td>   <td>2685</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAllOrders.getallorder()[pri:0, instance:Automation.Admin.GetAllOrders@1046d517]">getallorder</td> 
   <td>main@768415370</td>   <td></td> </tr>
-<tr bgcolor="937f7b">  <td>23/10/10 12:09:45</td>   <td>3684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAllRating.getallrating()[pri:0, instance:Automation.Admin.GetAllRating@7a362b6b]">getallrating</td> 
+<tr bgcolor="937f7b">  <td>23/10/11 22:01:25</td>   <td>2749</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetAllRating.getallrating()[pri:0, instance:Automation.Admin.GetAllRating@7a362b6b]">getallrating</td> 
   <td>main@768415370</td>   <td></td> </tr>
-<tr bgcolor="8baff6">  <td>23/10/10 12:09:45</td>   <td>3774</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RejectRestaurant.rejectresto()[pri:0, instance:Automation.Admin.RejectRestaurant@1c93f6e1]">rejectresto</td> 
+<tr bgcolor="8baff6">  <td>23/10/11 22:01:25</td>   <td>2824</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RejectRestaurant.rejectresto()[pri:0, instance:Automation.Admin.RejectRestaurant@1c93f6e1]">rejectresto</td> 
   <td>main@768415370</td>   <td></td> </tr>
-<tr bgcolor="989572">  <td>23/10/10 12:09:46</td>   <td>3921</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddDish.Adddish()[pri:0, instance:Automation.Restaurant.AddDish@363a52f]">Adddish</td> 
+<tr bgcolor="989572">  <td>23/10/11 22:01:25</td>   <td>2943</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddDish.Adddish()[pri:0, instance:Automation.Restaurant.AddDish@363a52f]">Adddish</td> 
   <td>main@768415370</td>   <td></td> </tr>
-<tr bgcolor="9be66c">  <td>23/10/10 12:09:46</td>   <td>4032</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteDish.Deletedish()[pri:0, instance:Automation.Restaurant.DeleteDish@3adcc812]">Deletedish</td> 
+<tr bgcolor="9be66c">  <td>23/10/11 22:01:25</td>   <td>3081</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteDish.Deletedish()[pri:0, instance:Automation.Restaurant.DeleteDish@3adcc812]">Deletedish</td> 
   <td>main@768415370</td>   <td></td> </tr>
-<tr bgcolor="9d9978">  <td>23/10/10 12:09:46</td>   <td>4497</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Disabledish.disabledih()[pri:0, instance:Automation.Restaurant.Disabledish@4b41dd5c]">disabledih</td> 
+<tr bgcolor="9d9978">  <td>23/10/11 22:01:25</td>   <td>3317</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Disabledish.disabledish()[pri:0, instance:Automation.Restaurant.Disabledish@4b41dd5c]">disabledish</td> 
   <td>main@768415370</td>   <td></td> </tr>
-<tr bgcolor="928367">  <td>23/10/10 12:09:46</td>   <td>4664</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EnableDish.enableDish()[pri:0, instance:Automation.Restaurant.EnableDish@1603cd68]">enableDish</td> 
+<tr bgcolor="928367">  <td>23/10/11 22:01:26</td>   <td>3428</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="EnableDish.enableDish()[pri:0, instance:Automation.Restaurant.EnableDish@1603cd68]">enableDish</td> 
   <td>main@768415370</td>   <td></td> </tr>
-<tr bgcolor="c98293">  <td>23/10/10 12:09:46</td>   <td>4766</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetDishByid.getDishbyid()[pri:0, instance:Automation.Restaurant.GetDishByid@4f0100a7]">getDishbyid</td> 
+<tr bgcolor="c98293">  <td>23/10/11 22:01:26</td>   <td>3523</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetDishByid.getDishbyid()[pri:0, instance:Automation.Restaurant.GetDishByid@4f0100a7]">getDishbyid</td> 
   <td>main@768415370</td>   <td></td> </tr>
-<tr bgcolor="697db9">  <td>23/10/10 12:09:47</td>   <td>4896</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpdateDish.updatedish()[pri:0, instance:Automation.Restaurant.UpdateDish@6581dc0a]">updatedish</td> 
+<tr bgcolor="697db9">  <td>23/10/11 22:01:26</td>   <td>3587</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpdateDish.updatedish()[pri:0, instance:Automation.Restaurant.UpdateDish@6581dc0a]">updatedish</td> 
   <td>main@768415370</td>   <td></td> </tr>
-<tr bgcolor="728596">  <td>23/10/10 12:09:47</td>   <td>5016</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetRestaurantByLoction.getrestaurantbyloc()[pri:0, instance:Automation.user.GetRestaurantByLoction@32c4e8b2]">getrestaurantbyloc</td> 
+<tr bgcolor="728596">  <td>23/10/11 22:01:26</td>   <td>3713</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetRestaurantByLoction.getrestaurantbyloc()[pri:0, instance:Automation.user.GetRestaurantByLoction@32c4e8b2]">getrestaurantbyloc</td> 
   <td>main@768415370</td>   <td></td> </tr>
-<tr bgcolor="75bcc1">  <td>23/10/10 12:09:47</td>   <td>5102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetRestaurantByName.getbyname()[pri:0, instance:Automation.user.GetRestaurantByName@4f5991f6]">getbyname</td> 
+<tr bgcolor="75bcc1">  <td>23/10/11 22:01:26</td>   <td>3810</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetRestaurantByName.getbyname()[pri:0, instance:Automation.user.GetRestaurantByName@4f5991f6]">getbyname</td> 
   <td>main@768415370</td>   <td></td> </tr>
-<tr bgcolor="67b4bf">  <td>23/10/10 12:09:47</td>   <td>5214</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GiveRating.giverating()[pri:0, instance:Automation.user.GiveRating@32c726ee]">giverating</td> 
+<tr bgcolor="67b4bf">  <td>23/10/11 22:01:26</td>   <td>3915</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GiveRating.giverating()[pri:0, instance:Automation.user.GiveRating@32c726ee]">giverating</td> 
   <td>main@768415370</td>   <td></td> </tr>
-<tr bgcolor="928d93">  <td>23/10/10 12:09:47</td>   <td>5320</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PlaceOrder.placeorder()[pri:0, instance:Automation.user.PlaceOrder@7f0d96f2]">placeorder</td> 
+<tr bgcolor="928d93">  <td>23/10/11 22:01:26</td>   <td>4011</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PlaceOrder.placeorder()[pri:0, instance:Automation.user.PlaceOrder@7f0d96f2]">placeorder</td> 
   <td>main@768415370</td>   <td></td> </tr>
 </table>
