--- a/test-output/old/API Test Suite/toc.html
+++ b/test-output/old/API Test Suite/toc.html
@@ -22,56 +22,16 @@
 </tr></table>
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'> dishbyid (0/1/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>delete dish (0/1/0)</td><td valign='top' align='right'>
+  <a href='delete dish.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'> dishbyid (1/0/0)</td><td valign='top' align='right'>
   <a href=' dishbyid.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'> updatedish (0/1/0)</td><td valign='top' align='right'>
-  <a href=' updatedish.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>Add Restaurant Test (0/1/0)</td><td valign='top' align='right'>
-  <a href='Add Restaurant Test.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>Add dish (0/1/0)</td><td valign='top' align='right'>
-  <a href='Add dish.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>Getallorders (0/1/0)</td><td valign='top' align='right'>
-  <a href='Getallorders.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>disable dish (0/1/0)</td><td valign='top' align='right'>
-  <a href='disable dish.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-failed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>enable dish (0/1/0)</td><td valign='top' align='right'>
-  <a href='enable dish.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
@@ -94,6 +54,30 @@
 
 <table width='100%' class='test-passed'>
 <tr><td>
+<table style='width: 100%'><tr><td valign='top'> updatedish (1/0/0)</td><td valign='top' align='right'>
+  <a href=' updatedish.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Add Restaurant Test (1/0/0)</td><td valign='top' align='right'>
+  <a href='Add Restaurant Test.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Add dish (1/0/0)</td><td valign='top' align='right'>
+  <a href='Add dish.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
 <table style='width: 100%'><tr><td valign='top'>Approve restaurant (1/0/0)</td><td valign='top' align='right'>
   <a href='Approve restaurant.html' target='mainFrame'>Results</a>
 </td></tr></table>
@@ -104,6 +88,14 @@
 <tr><td>
 <table style='width: 100%'><tr><td valign='top'>Get All Restaurant Test (1/0/0)</td><td valign='top' align='right'>
   <a href='Get All Restaurant Test.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Getallorders (1/0/0)</td><td valign='top' align='right'>
+  <a href='Getallorders.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
@@ -126,8 +118,16 @@
 
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>delete dish (1/0/0)</td><td valign='top' align='right'>
-  <a href='delete dish.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>disable dish (1/0/0)</td><td valign='top' align='right'>
+  <a href='disable dish.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>enable dish (1/0/0)</td><td valign='top' align='right'>
+  <a href='enable dish.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
