--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,71 +8,50 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">API Test Suite</th></tr>
-<tr><td><a href="#t0">Add Restaurant Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">2,040</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Get All Restaurant Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">83</td><td></td><td></td></tr>
-<tr><td><a href="#t2">Approve restaurant</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">90</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t3">Getallorders</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">42</td><td></td><td></td></tr>
-<tr><td><a href="#t4">Getallrating</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">45</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t5">RejectRestaurant</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">60</td><td></td><td></td></tr>
-<tr><td><a href="#t6">Add dish</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">121</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t7">delete dish</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">147</td><td></td><td></td></tr>
-<tr><td><a href="#t8">disable dish</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">94</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t9">enable dish</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">74</td><td></td><td></td></tr>
-<tr><td><a href="#t10"> dishbyid</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">39</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t11"> updatedish</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">96</td><td></td><td></td></tr>
-<tr><td><a href="#t12"> get resataurant by location</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">69</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t13"> get resataurant by name</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">80</td><td></td><td></td></tr>
-<tr><td><a href="#t14">give rating</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">77</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t15">place order</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">117</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">15</th><th class="num">0</th><th class="num">0</th><th class="num attn">1</th><th class="num">3,274</th><th colspan="2"></th></tr>
+<tr><th colspan="8">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">1,898</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">API Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Add Restaurant Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Automation.AddRestaurant</td><td><a href="#m0">Addresto</a></td><td rowspan="1">1697041882663</td><td rowspan="1">1954</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Get All Restaurant Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Automation.GetAllRestaurant</td><td><a href="#m1">GetAll</a></td><td rowspan="1">1697041885118</td><td rowspan="1">81</td></tr></tbody>
-<tbody id="t2"><tr><th colspan="4">Approve restaurant &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Automation.Admin.ApproveRestaurant</td><td><a href="#m2">approveresto</a></td><td rowspan="1">1697041885230</td><td rowspan="1">85</td></tr></tbody>
-<tbody id="t3"><tr><th colspan="4">Getallorders &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Automation.Admin.GetAllOrders</td><td><a href="#m3">getallorder</a></td><td rowspan="1">1697041885347</td><td rowspan="1">38</td></tr></tbody>
-<tbody id="t4"><tr><th colspan="4">Getallrating &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Automation.Admin.GetAllRating</td><td><a href="#m4">getallrating</a></td><td rowspan="1">1697041885411</td><td rowspan="1">43</td></tr></tbody>
-<tbody id="t5"><tr><th colspan="4">RejectRestaurant &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Automation.Admin.RejectRestaurant</td><td><a href="#m5">rejectresto</a></td><td rowspan="1">1697041885486</td><td rowspan="1">51</td></tr></tbody>
-<tbody id="t6"><tr><th colspan="4">Add dish &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Automation.Restaurant.AddDish</td><td><a href="#m6">Adddish</a></td><td rowspan="1">1697041885605</td><td rowspan="1">115</td></tr></tbody>
-<tbody id="t7"><tr><th colspan="4">delete dish &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Automation.Restaurant.DeleteDish</td><td><a href="#m7">Deletedish</a></td><td rowspan="1">1697041885743</td><td rowspan="1">112</td></tr></tbody>
-<tbody id="t8"><tr><th colspan="4">disable dish &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Automation.Restaurant.Disabledish</td><td><a href="#m8">disabledish</a></td><td rowspan="1">1697041885979</td><td rowspan="1">88</td></tr></tbody>
-<tbody id="t9"><tr><th colspan="4">enable dish &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Automation.Restaurant.EnableDish</td><td><a href="#m9">enableDish</a></td><td rowspan="1">1697041886090</td><td rowspan="1">71</td></tr></tbody>
-<tbody id="t10"><tr><th colspan="4"> dishbyid &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Automation.Restaurant.GetDishByid</td><td><a href="#m10">getDishbyid</a></td><td rowspan="1">1697041886185</td><td rowspan="1">37</td></tr></tbody>
-<tbody id="t11"><tr><th colspan="4"> updatedish &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Automation.Restaurant.UpdateDish</td><td><a href="#m11">updatedish</a></td><td rowspan="1">1697041886249</td><td rowspan="1">92</td></tr></tbody>
-<tbody id="t12"><tr><th colspan="4"> get resataurant by location &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Automation.user.GetRestaurantByLoction</td><td><a href="#m12">getrestaurantbyloc</a></td><td rowspan="1">1697041886375</td><td rowspan="1">66</td></tr></tbody>
-<tbody id="t13"><tr><th colspan="4"> get resataurant by name &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Automation.user.GetRestaurantByName</td><td><a href="#m13">getbyname</a></td><td rowspan="1">1697041886472</td><td rowspan="1">76</td></tr></tbody>
-<tbody id="t14"><tr><th colspan="4">give rating &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Automation.user.GiveRating</td><td><a href="#m14">giverating</a></td><td rowspan="1">1697041886577</td><td rowspan="1">67</td></tr></tbody>
-<tbody id="t15"><tr><th colspan="4">place order &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Automation.user.PlaceOrder</td><td><a href="#m15">placeorder</a></td><td rowspan="1">1697041886673</td><td rowspan="1">104</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">Automation.Admin.GetAllOrders</td><td><a href="#m0">getallorder</a></td><td rowspan="1">1697468232765</td><td rowspan="1">1843</td></tr></tbody>
 </table>
-<h2>Add Restaurant Test</h2><h3 id="m0">Automation.AddRestaurant#Addresto</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Get All Restaurant Test</h2><h3 id="m1">Automation.GetAllRestaurant#GetAll</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Approve restaurant</h2><h3 id="m2">Automation.Admin.ApproveRestaurant#approveresto</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Getallorders</h2><h3 id="m3">Automation.Admin.GetAllOrders#getallorder</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Getallrating</h2><h3 id="m4">Automation.Admin.GetAllRating#getallrating</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>RejectRestaurant</h2><h3 id="m5">Automation.Admin.RejectRestaurant#rejectresto</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Add dish</h2><h3 id="m6">Automation.Restaurant.AddDish#Adddish</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>delete dish</h2><h3 id="m7">Automation.Restaurant.DeleteDish#Deletedish</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: 1 expectation failed.
-Expected status code &lt;404&gt; but was &lt;200&gt;.
-
-	at org.codehaus.groovy.runtime.callsite.ConstructorSite$ConstructorSiteNoUnwrap.callConstructor(ConstructorSite.java:84)
-	at org.codehaus.groovy.runtime.callsite.CallSiteArray.defaultCallConstructor(CallSiteArray.java:59)
-	at org.codehaus.groovy.runtime.callsite.AbstractCallSite.callConstructor(AbstractCallSite.java:238)
-	at org.codehaus.groovy.runtime.callsite.AbstractCallSite.callConstructor(AbstractCallSite.java:250)
-	at io.restassured.internal.ResponseSpecificationImpl$HamcrestAssertionClosure.validate(ResponseSpecificationImpl.groovy:494)
-	at io.restassured.internal.ResponseSpecificationImpl$HamcrestAssertionClosure$validate$1.call(Unknown Source)
-	at io.restassured.internal.ResponseSpecificationImpl.validate(ResponseSpecificationImpl.groovy:91)
-	at io.restassured.internal.ValidatableResponseOptionsImpl.specification(ValidatableResponseOptionsImpl.java:321)
-	at io.restassured.internal.ValidatableResponseOptionsImpl.spec(ValidatableResponseOptionsImpl.java:298)
-	at Automation.Restaurant.DeleteDish.Deletedish(DeleteDish.java:34)
+<h2>Default test</h2><h3 id="m0">Automation.Admin.GetAllOrders#getallorder</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NoClassDefFoundError: com/github/fge/jackson/JsonLoader
+	at io.restassured.module.jsv.JsonSchemaValidator$3.createSchemaInstance(JsonSchemaValidator.java:155)
+	at io.restassured.module.jsv.JsonSchemaValidator$3.createSchemaInstance(JsonSchemaValidator.java:152)
+	at io.restassured.module.jsv.JsonSchemaValidator$JsonSchemaValidatorFactory.create(JsonSchemaValidator.java:284)
+	at io.restassured.module.jsv.JsonSchemaValidator.matchesJsonSchema(JsonSchemaValidator.java:157)
+	at Automation.Admin.GetAllOrders.getallorder(GetAllOrders.java:31)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
+	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+	at java.base/java.lang.reflect.Method.invoke(Method.java:566)
+	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
+	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:598)
+	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
+	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
+	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:824)
+	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
+	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
+	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
 	at java.base/java.util.ArrayList.forEach(ArrayList.java:1541)
-... Removed 33 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>disable dish</h2><h3 id="m8">Automation.Restaurant.Disabledish#disabledish</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>enable dish</h2><h3 id="m9">Automation.Restaurant.EnableDish#enableDish</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2> dishbyid</h2><h3 id="m10">Automation.Restaurant.GetDishByid#getDishbyid</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2> updatedish</h2><h3 id="m11">Automation.Restaurant.UpdateDish#updatedish</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2> get resataurant by location</h2><h3 id="m12">Automation.user.GetRestaurantByLoction#getrestaurantbyloc</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2> get resataurant by name</h2><h3 id="m13">Automation.user.GetRestaurantByName#getbyname</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>give rating</h2><h3 id="m14">Automation.user.GiveRating#giverating</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>place order</h2><h3 id="m15">Automation.user.PlaceOrder#placeorder</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+	at org.testng.TestRunner.privateRun(TestRunner.java:794)
+	at org.testng.TestRunner.run(TestRunner.java:596)
+	at org.testng.SuiteRunner.runTest(SuiteRunner.java:377)
+	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:371)
+	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:332)
+	at org.testng.SuiteRunner.run(SuiteRunner.java:276)
+	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
+	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
+	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1212)
+	at org.testng.TestNG.runSuitesLocally(TestNG.java:1134)
+	at org.testng.TestNG.runSuites(TestNG.java:1063)
+	at org.testng.TestNG.run(TestNG.java:1031)
+	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
+	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
+	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
+Caused by: java.lang.ClassNotFoundException: com.github.fge.jackson.JsonLoader
+	at java.base/jdk.internal.loader.BuiltinClassLoader.loadClass(BuiltinClassLoader.java:581)
+	at java.base/jdk.internal.loader.ClassLoaders$AppClassLoader.loadClass(ClassLoaders.java:178)
+	at java.base/java.lang.ClassLoader.loadClass(ClassLoader.java:521)
+	... 33 more
+</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
