--- a/test-output/old/API Test Suite/toc.html
+++ b/test-output/old/API Test Suite/toc.html
@@ -22,16 +22,24 @@
 </tr></table>
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>delete dish (0/1/0)</td><td valign='top' align='right'>
-  <a href='delete dish.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'> dishbyid (0/1/0)</td><td valign='top' align='right'>
+  <a href=' dishbyid.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'> dishbyid (1/0/0)</td><td valign='top' align='right'>
-  <a href=' dishbyid.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Add Restaurant Test (0/1/0)</td><td valign='top' align='right'>
+  <a href='Add Restaurant Test.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>delete dish (0/1/0)</td><td valign='top' align='right'>
+  <a href='delete dish.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
@@ -56,14 +64,6 @@
 <tr><td>
 <table style='width: 100%'><tr><td valign='top'> updatedish (1/0/0)</td><td valign='top' align='right'>
   <a href=' updatedish.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-passed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>Add Restaurant Test (1/0/0)</td><td valign='top' align='right'>
-  <a href='Add Restaurant Test.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
